# evalicious

./: Cargo.toml
src/: ast.rs  eval.rs  main.rs  parser.rs
