[package]
name = "calculator"
version = "0.1.0"
edition = "2024"

[dependencies]
nom = "8.0.0"
thiserror = "2.0.12"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
teloxide = { version = "0.15.0", features = ["macros"] }
log = "0.4.27"
anyhow = "1.0.98"
dotenvy = "0.15.7"
tracing-subscriber = "0.3.19"
